- Create jnosql-jupiter module
- Enhance readme, adding Mapping and communication details.

=== Removed

- Remove ColumnQueryMapper implementation
- Remove DocumentQueryMapper implementation
- Remove support for old Repository and Pagination (replaced by Jakarta Data)

=== Fixed

- Enhance constructor converter allowing simple translating supported by Value implementation.

== [1.0.0.4-b5] - 2022-12-22

=== Added
- Create a CHANGELOG file to track the specification evolution
- Add Settings implementation using Eclipse MicroProfile Config
- Support to Record and Constructor

=== Changed
- Move the default documentation to ASCIIDOC
- Replace Hamcrest by AsseJ
- Scan entities classes using classgraph project
- move the bean-discovery-mode to annotated instead of all

=== Removed

- Remove Eclipse MicroProfile Config converts

=== Fixed
- Fix param binder when bind for In query condition

== [1.0.0-b4] - 2022-08-04

=== Added
- Add QueryBuilder

=== Changed
- Upgrade Tinkerpop to version 3.6.0

=== Fixed
- Parasite property in document deserialization

== [1.0.0-b3] - 2021-03-01

=== Changed
- Remove JNoSQL logo from repositories
- Remove "Artemis" references in the package and use "mapping" instead.
- Remove "diana" references in the package name and use "communication" instead.
- Update Cassandra library to use DataStax OSS

=== Fixed
- Fixes HashMap issue in the mapping API

== [1.0.0-b2] - 2020-06-07

=== Added
- Creates TCK Mapping
- Creates TCK Communication
- Creates TCK Drive
- Defines Reactive API as an extension

=== Changed
- Remove Async APIs
- Keep the compatibility with Java 11 and Java 8

== [1.0.0-b1] - 2019-12-01

=== Added
- Creates Integration with Eclipse MicroProfile Configuration
- Creates Tree Graph Operation

=== Changed
- Split the project into API/implementation
- Updates the API to use Jakarta NoSQL
- Moves the Jakarta NoSQL API to the right project

== [0.0.9] - 2019-05-16

=== Added
- Allows Repository with pagination