@@ -15,11 +15,15 @@
 package org.eclipse.jnosql.mapping.column;
 
 import jakarta.nosql.Template;
+import org.eclipse.jnosql.mapping.Database;
+import org.eclipse.jnosql.mapping.DatabaseType;
 import org.eclipse.jnosql.mapping.test.jupiter.CDIExtension;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import jakarta.inject.Inject;
+
+import static org.eclipse.jnosql.mapping.DatabaseType.COLUMN;
 
 @CDIExtension
 class ColumnTemplateTest {
@@ -27,8 +31,17 @@ class ColumnTemplateTest {
     @Inject
     private Template template;
 
+    @Inject
+    @Database(COLUMN)
+    private Template qualifier;
+
     @Test
     public void shouldInjectTemplate() {
         Assertions.assertNotNull(template);
+    }
+
+    @Test
+    public void shouldInjectQualifier() {
+        Assertions.assertNotNull(qualifier);
     }
 }
